--- a/internal/assets/manifests/resource-sync-rule/templates/mesh-cluster-feature.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/mesh-cluster-feature.yaml
@@ -2,10 +2,10 @@
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ClusterFeature
 metadata:
-  name: {{ include "name-with-revision" (dict "name" "mesh" "context" $) }}
+  name: {{ include "name-with-revision" (dict "name" "istio.servicemesh.cisco.com/mesh-source" "context" $) }}
   labels:
     release: {{ .Release.Name }}
     istio.io/rev: {{ include "namespaced-revision" . }}
 spec:
-  featureName: "mesh"
+  featureName: "istio.servicemesh.cisco.com/mesh-source"
 {{- end }}
