--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -144,9 +144,9 @@ metadata:
   labels:
     istio.io/rev: cp-v111x.istio-system
     release: istio-resource-sync-rule
-  name: istio-multi-cluster-secret-cp-v111x
+  name: istio.servicemesh.cisco.com/multi-cluster-secret-source-cp-v111x
 spec:
-  featureName: istio-multi-cluster-secret
+  featureName: istio.servicemesh.cisco.com/multi-cluster-secret-source
 ---
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ClusterFeature
@@ -154,9 +154,9 @@ metadata:
   labels:
     istio.io/rev: cp-v111x.istio-system
     release: istio-resource-sync-rule
-  name: peeristiocontrolplane-cp-v111x
+  name: istio.servicemesh.cisco.com/peeristiocontrolplane-source-cp-v111x
 spec:
-  featureName: peeristiocontrolplane
+  featureName: istio.servicemesh.cisco.com/peeristiocontrolplane-source
 ---
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ResourceSyncRule
@@ -165,10 +165,10 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: istio-ca-root-cert-cp-v111x
+  name: istio.servicemesh.cisco.com/ca-root-cert-sink-cp-v111x
 spec:
   clusterFeatureMatch:
-    - featureName: istio-ca-root-cert
+    - featureName: istio.servicemesh.cisco.com/ca-root-cert-source
       matchLabels:
         istio.io/rev: cp-v111x.istio-system
   groupVersionKind:
@@ -186,10 +186,10 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: mesh-cp-v111x
+  name: istio.servicemesh.cisco.com/mesh-sink-cp-v111x
 spec:
   clusterFeatureMatch:
-    - featureName: mesh
+    - featureName: istio.servicemesh.cisco.com/mesh-source
       matchLabels:
         istio.io/rev: cp-v111x.istio-system
   groupVersionKind:
@@ -210,10 +210,10 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: peeristiocontrolplane-cp-v111x
+  name: istio.servicemesh.cisco.com/peeristiocontrolplane-sink-cp-v111x
 spec:
   clusterFeatureMatch:
-    - featureName: peeristiocontrolplane
+    - featureName: istio.servicemesh.cisco.com/peeristiocontrolplane-source
       matchLabels:
         istio.io/rev: cp-v111x.istio-system
   groupVersionKind:
