Fix ResourseSyncRule and ClusterFeature CR names

--- a/internal/assets/manifests/resource-sync-rule/templates/istio-ca-root-cert-cluster-feature.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/istio-ca-root-cert-cluster-feature.yaml
@@ -2,7 +2,7 @@
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ClusterFeature
 metadata:
-  name: {{ include "name-with-revision" (dict "name" "istio.servicemesh.cisco.com/ca-root-cert-source" "context" $) }}
+  name: {{ include "name-with-revision" (dict "name" "istio-ca-root-cert-source" "context" $) }}
   labels:
     release: {{ .Release.Name }}
     istio.io/rev: {{ include "namespaced-revision" . }}
