--- a/internal/assets/manifests/resource-sync-rule/templates/mesh-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/mesh-resource-sync-rule.yaml
@@ -2,7 +2,7 @@
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ResourceSyncRule
 metadata:
-  name: {{ include "name-with-revision" (dict "name" "istio.servicemesh.cisco.com/mesh-sink" "context" $) }}
+  name: {{ include "name-with-revision" (dict "name" "istio-mesh-sink" "context" $) }}
   annotations:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
