--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -144,7 +144,7 @@ metadata:
   labels:
     istio.io/rev: cp-v111x.istio-system
     release: istio-resource-sync-rule
-  name: istio.servicemesh.cisco.com/multi-cluster-secret-source-cp-v111x
+  name: istio-multi-cluster-secret-source-cp-v111x
 spec:
   featureName: istio.servicemesh.cisco.com/multi-cluster-secret-source
 ---
@@ -154,7 +154,7 @@ metadata:
   labels:
     istio.io/rev: cp-v111x.istio-system
     release: istio-resource-sync-rule
-  name: istio.servicemesh.cisco.com/peeristiocontrolplane-source-cp-v111x
+  name: istio-peeristiocontrolplane-source-cp-v111x
 spec:
   featureName: istio.servicemesh.cisco.com/peeristiocontrolplane-source
 ---
@@ -165,7 +165,7 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: istio.servicemesh.cisco.com/ca-root-cert-sink-cp-v111x
+  name: istio-ca-root-cert-sink-cp-v111x
 spec:
   clusterFeatureMatch:
     - featureName: istio.servicemesh.cisco.com/ca-root-cert-source
@@ -186,7 +186,7 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: istio.servicemesh.cisco.com/mesh-sink-cp-v111x
+  name: istio-mesh-sink-cp-v111x
 spec:
   clusterFeatureMatch:
     - featureName: istio.servicemesh.cisco.com/mesh-source
@@ -210,7 +210,7 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
-  name: istio.servicemesh.cisco.com/peeristiocontrolplane-sink-cp-v111x
+  name: istio-peeristiocontrolplane-sink-cp-v111x
 spec:
   clusterFeatureMatch:
     - featureName: istio.servicemesh.cisco.com/peeristiocontrolplane-source
