--- a/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-cluster-feature.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-cluster-feature.yaml
@@ -1,7 +1,7 @@
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ClusterFeature
 metadata:
-  name: {{ include "name-with-revision" (dict "name" "istio.servicemesh.cisco.com/peeristiocontrolplane-source" "context" $) }}
+  name: {{ include "name-with-revision" (dict "name" "istio-peeristiocontrolplane-source" "context" $) }}
   labels:
     release: {{ .Release.Name }}
     istio.io/rev: {{ include "namespaced-revision" . }}
