--- a/internal/assets/manifests/istio-meshgateway/values.yaml
+++ b/internal/assets/manifests/istio-meshgateway/values.yaml
@@ -50,6 +50,9 @@ service:
   ports: []
   selector: {}
 
+externalService:
+  addresses: {}
+
 global:
   imagePullPolicy: "IfNotPresent"
   imagePullSecrets: []
