--- a/internal/assets/manifests/istio-discovery/templates/clusterrolebinding.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/clusterrolebinding.yaml
@@ -13,5 +13,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
-    namespace: {{ .Values.global.istioNamespace }}
+    namespace: {{ .Release.Namespace }}
 {{- end }}
