--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,4 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: banzaicloud/istio-operator
+  newName: ghcr.io/banzaicloud/istio-operator
