--- a/.licensei.toml
+++ b/.licensei.toml
@@ -41,7 +41,7 @@ ignoreFiles = [
 ]
 
 template = """/*
-Copyright 2021 Cisco Systems, Inc. and/or its affiliates.
+Copyright :YEAR: Cisco Systems, Inc. and/or its affiliates.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
